# chain-of-agents

./: .gitignore  .pypirc.template  LICENSE  MANIFEST.in  README.md  build_package.sh  chain-of-agents.md  pyproject.toml  requirements.txt  setup.py  setup_nltk.py  test_import.py
.github/workflows/: ci.yml
chain_of_agents/: __init__.py
chain_of_agents/agents/: manager_agent.py  worker_agent.py
chain_of_agents/chunking/: chunker.py
chain_of_agents/models/: __init__.py  base_model.py  gemini_model.py  ollama_model.py
chain_of_agents/providers/: base_embedding_provider.py  base_llm_provider.py
chain_of_agents/providers/embedding/: gemini_embedding.py  openai_embedding.py  sentence_transformer_embedding.py
chain_of_agents/providers/llm/: gemini_llm.py  ollama_llm.py  openai_llm.py
examples/: ollama_question_answering.py  qa_long_text.py  qa_long_text_gemini.py  qa_long_text_ollama_local_embed.py  question_answering.py  summarization.py  summarize_pdf_ollama.py  test_import.py
src/: __init__.py  chain_of_agents.py
src/agents/: manager_agent.py  worker_agent.py
src/models/: __init__.py  gemini_model.py
tests/: __init__.py  conftest.py  test_chain_of_agents.py  test_chunker.py  test_import.py
tests/agents/: test_prompts.py
tests/chunking/: test_chunker.py
tests/integration/: test_chain_of_agents.py
