[build-system]
requires = ["setuptools>=68", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "chain-of-agents"
version = "0.1.0"
description = "Chain of Agents framework for processing long-context tasks"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
  { name = "QKI Analytics" }
]
maintainers = [
  { name = "QKI Analytics", email = "info@qkianalytics.com" }
]
keywords = ["llm", "agents", "gemini", "openai", "ollama"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy>=1.21",
  "python-dotenv>=1.0",
  "tiktoken>=0.5",
]

[project.optional-dependencies]
openai = [
  "openai>=1.0.0",
]
gemini = [
  "google-genai>=0.6.0",
]
sentence-transformers = [
  "sentence-transformers>=2.6.1",
]
ollama = [
  "ollama>=0.1.5",
]
markitdown = [
  "markitdown>=0.1.1",
]
all = [
  "openai>=1.0.0",
  "google-genai>=0.6.0",
  "sentence-transformers>=2.6.1",
  "ollama>=0.1.5",
  "markitdown>=0.1.1",
]

[project.urls]
Homepage = "https://github.com/qkianalytics/chain-of-agents"
Source = "https://github.com/qkianalytics/chain-of-agents"
Issues = "https://github.com/qkianalytics/chain-of-agents/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["chain_of_agents*"]
exclude = ["examples", "tests"]
